--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "html-practice-bnb-2"]
 	path = html-practice-bnb-2
 	url = https://github.com/mateuscqueiros/html-practice-bnb-2
+[submodule "flexbox-bnb-2"]
+	path = flexbox-bnb-2
+	url = git@github.com:mateuscqueiros/flexbox-bnb-2.git
