--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "flexbox-bnb-2"]
 	path = flexbox-bnb-2
 	url = git@github.com:mateuscqueiros/flexbox-bnb-2.git
+[submodule "grid-bnb-2"]
+	path = grid-bnb-2
+	url = https://github.com/mateuscqueiros/grid-bnb-2
