--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = https://github.com/mateuscqueiros/position-bnb-2
 [submodule "html-practice-bnb-2"]
 	path = html-practice-bnb-2
-	url = https://github.com/mateuscqueiros/html-practice-bnb-2
+	url = git@github.com:mateuscqueiros/html-practice-bnb-2.git 
 [submodule "flexbox-bnb-2"]
 	path = flexbox-bnb-2
 	url = git@github.com:mateuscqueiros/flexbox-bnb-2.git
